test_suite/tests/macros/ui/provide_bind_nonexisting_type.stderr
error[E0405]: cannot find trait `Add` in this scope
 --> tests/macros/ui/provide_bind_nonexisting_type.rs:3:1
  |
3 | #[provide(bind="Add<usize>")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `provide` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
1 | use core::ops::Add;
  |
1 | use std::ops::Add;
  |
